# hello_world_server

./: Cargo.toml  Dockerfile  Makefile  README.md  users.db
src/: config.rs  main.rs
src/models/: user_model.rs
src/routes/: greet_route.rs  mod.rs  random_route.rs  user_route.rs
