[package]
name = "hello_world_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
env_logger = "0.10.1"
log = "0.4.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
rusqlite = { version = "0.30.0", features = ["bundled"] }
ed25519-dalek = { version = "2.1.0", features = ["pkcs8", "rand_core", "digest"] }
rand_core = { version = "0.6.2", default-features = false, optional = true }
hex = "0.4.3"
sha2 = "0.10.8"

[features]
default = ["rand-traits", "std"]
rand-traits = ["rand_core"]
# Enables `std::error::Error` impls.
std = []

